feat: worked on repository services req and res for users data
